tests/fail/ZeroFillRightBitShift.java
package fail;

import java.lang.System;

public class ZeroFillRightBitShift {

  public static void main(String[] args ) {
    4 >>> "hi";
  }

}
